examples/invalid/undeclared-variable.ra
func main(): void {
  a = b;
  c = d;
}
